; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_videomode.c_VIDEOMODE_SetCustomVerticalArea.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_videomode.c_VIDEOMODE_SetCustomVerticalArea.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VIDEOMODE_custom_vertical_area = common dso_local global i32 0, align 4
@VIDEOMODE_vertical_area = common dso_local global i32 0, align 4
@VIDEOMODE_MIN_VERTICAL_AREA = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@VIDEOMODE_MAX_VERTICAL_AREA = common dso_local global i32 0, align 4
@VIDEOMODE_VERTICAL_CUSTOM = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @VIDEOMODE_SetCustomVerticalArea(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* @VIDEOMODE_custom_vertical_area, align 4
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* @VIDEOMODE_vertical_area, align 4
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @VIDEOMODE_MIN_VERTICAL_AREA, align 4
  %10 = icmp ult i32 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @FALSE, align 4
  store i32 %12, i32* %2, align 4
  br label %39

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @VIDEOMODE_MAX_VERTICAL_AREA, align 4
  %16 = icmp ugt i32 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i32, i32* @VIDEOMODE_MAX_VERTICAL_AREA, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %17, %13
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* @VIDEOMODE_custom_vertical_area, align 4
  %22 = icmp ne i32 %20, %21
  br i1 %22, label %27, label %23

23:                                               ; preds = %19
  %24 = load i32, i32* @VIDEOMODE_vertical_area, align 4
  %25 = load i32, i32* @VIDEOMODE_VERTICAL_CUSTOM, align 4
  %26 = icmp ne i32 %24, %25
  br i1 %26, label %27, label %37

27:                                               ; preds = %23, %19
  %28 = load i32, i32* %3, align 4
  store i32 %28, i32* @VIDEOMODE_custom_vertical_area, align 4
  %29 = load i32, i32* @VIDEOMODE_VERTICAL_CUSTOM, align 4
  store i32 %29, i32* @VIDEOMODE_vertical_area, align 4
  %30 = call i32 (...) @VIDEOMODE_Update()
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %36, label %32

32:                                               ; preds = %27
  %33 = load i32, i32* %4, align 4
  store i32 %33, i32* @VIDEOMODE_custom_vertical_area, align 4
  %34 = load i32, i32* %5, align 4
  store i32 %34, i32* @VIDEOMODE_vertical_area, align 4
  %35 = load i32, i32* @FALSE, align 4
  store i32 %35, i32* %2, align 4
  br label %39

36:                                               ; preds = %27
  br label %37

37:                                               ; preds = %36, %23
  %38 = load i32, i32* @TRUE, align 4
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %37, %32, %11
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @VIDEOMODE_Update(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
